--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ h1 {
     margin-bottom: 20px;
     color: #333;
 }
+.button{
+    border-radius: 12px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 .task {
     display: flex;
