--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f7f7f7;
+    background-color: rgb(25, 25, 25);
     display: flex;
     justify-content: center;
     align-items: center;
