Se ha añadido estilo a las tareas y se ha modifificado el script que añade taras a las listas, ahora añade las tareas con nombre de clase

--- a/Vista/styles.css
+++ b/Vista/styles.css
@@ -55,7 +55,14 @@ h1 {
 
 .taskcontainer>ul {
     list-style-type: none;
+    
 
+
+}
+.tarea{
+    border-radius: 15px;
+    margin: 2%;
+    padding: 15px;
 }
 
 /* Estilos para cada tipo de tarea */
